--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -11,7 +11,7 @@
 
 .app__navbar-logo {
     display: flex;
-    justify-content: flex-start;
+    justify-content: center;
     align-items: center;
 }
 
@@ -125,6 +125,11 @@
     }
 
     .app__navbar-logo img {
-        width: 110px;
+        width: 200px;       /* Set a fixed width */
+        height: auto;       /* Maintain the aspect ratio */
+        max-width: 100%;    /* Ensure it scales responsively */
+        object-fit: contain; /* Ensures the image fits within its container */
     }
+    
+    
 }
